ensured updates worked on mobile

--- a/assets/scss/_tab_interface.scss
+++ b/assets/scss/_tab_interface.scss
@@ -23,9 +23,6 @@ tab-container {
     }
   }
   li.active {
-    margin-bottom: -1px;
-    height: 31px;
-    padding: 9px 14px;
     a {
       color: black;
       text-decoration: none;
